# llama-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  rag.plan  test_api.py
.cursor/plans/: native-desktop-migration_b6eef056.plan.md
.github/: AGENTS.md  backend.instructions.md  copilot-instructions.md  frontend.instructions.md  release-template.md
.github/skills/react-frontend/: SKILL.md
.github/skills/rust-backend/: SKILL.md
.github/workflows/: ci.yml  release.yml  winget-hash-refresh.yml
docs/: ARCHITECTURE.md  DESKTOP_ARCHITECTURE.md  DEV_SETUP.md  PHASES.md  RELEASES.md  SPEC.md
scripts/: desktop-dev-run.sh  gen-nsis-bmps.py  install-linux.sh
src-backend/: Cargo.toml
src-backend/src/: app.rs  error.rs  lib.rs  main.rs  state.rs
src-backend/src/app_core/: chat.rs  chat_types.rs  config.rs  conversations.rs  downloads.rs  health.rs  huggingface.rs  mod.rs  models.rs  presets.rs  server.rs  ui_prefs.rs
src-backend/src/db/: mod.rs
src-backend/src/routes/: chat.rs  config.rs  conversations.rs  downloads.rs  health.rs  huggingface.rs  mod.rs  models.rs  presets.rs  server.rs  static_files.rs  ws.rs
src-backend/src/services/: config_store.rs  download_manager.rs  llama_process.rs  mod.rs  model_inspector.rs  model_registry.rs  preset_manager.rs  runtime_tools.rs  session_manager.rs
src-backend/tests/: integration_test.rs
src-frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src-frontend/scripts/: run-desktop-release.mjs
src-frontend/src/: App.tsx  index.css  main.tsx
src-frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-frontend/src-tauri/capabilities/: default.json
src-frontend/src-tauri/icons/: icon.icns
src-frontend/src-tauri/nsis/: installer-hooks.nsh
src-frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
src-frontend/src/__tests__/lib/: api.test.ts  desktop-streamChat.test.ts  utils.test.ts
src-frontend/src/components/: CommandPalette.tsx  LoadingSpinner.tsx  UpdateNotice.tsx
src-frontend/src/lib/: api.ts  apiTypes.ts  chatAttachments.ts  chatStream.ts  customTemplates.ts  desktopUpdates.ts  useKeyboardShortcuts.ts  useTheme.ts  useWebSocket.ts  utils.ts
src-frontend/src/pages/: ModelAnalyticsPage.tsx  ModelsPage.tsx  SettingsPage.tsx
src-frontend/src/stores/: appStore.ts  chatStore.ts  modelStore.ts  serverStore.ts
(+24 files in other folders)
