[package]
name = "ai-studio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# HTTP client (for proxying to llama.cpp)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async streams
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
urlencoding = "2"

# Embed frontend assets in release binary
rust-embed = { version = "8", features = ["mime-guess"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
