[package]
name = "llamastudio-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "llamastudio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
llamastudio-backend = { path = "../../src-backend" }
tauri = { version = "2", features = [] }
tauri-plugin-localhost = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2"
