[package]
name = "llamastudio-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "llamastudio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
llamastudio-backend = { path = "../../src-backend" }
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
